--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <![endif]-->
     </head>
     <body>
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-custom">
             <div class="container-fluid">
                 <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -45,7 +45,7 @@
 
                     <p>Hello and welcome to this blog. </p>
 
-                    <p>This blog has developed as part of my summer challenge. It is the culmination of three of my interests—reading, writing and web.
+                    <p>This blog has been developed as part of my summer challenge. It is the culmination of three of my interests—reading, writing and web.
                         Once I finish reading a book, I will put up an article about it. This is also part of my challenge.</p>
                     <p>The articles I put up, are not reviews really. They are mostly musings of my mind that I plan to share with you.</p>
                     <p> A wise woman once said: </p>
