--- a/index.html
+++ b/index.html
@@ -62,8 +62,12 @@
                 <h1>Latest Articles</h1>
                 <hr>
                 <ul class="list">
-                    <li><a href="articles/willpower.html">The Willpower Instinct by Kelly Mcdonigal.</a></li>
+                    <li><a href="articles/willpower.html">The Willpower Instinct by Kelly McGonigal.</a></li>
                     <li><a href="articles/hercule-poirots-christmas.html">Hercule Poirots Christmas by Agatha Christie.</a></li>
+                    <li><a href="articles/power-of-habit.html">The Power Of Habit by Charles Duhig</a></li>
+                    <li><a href="articles/murder-of-roger-ackroyd.html">The Murder of Roger Ackroyd.</a></li>
+
+
                 </ul>
             </div>
         </div>
