Added Readme, Added new article, modified home page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                     <p>This blog has been developed as part of my summer challenge. It is the culmination of three of my interests—reading, writing and web.
                         Once I finish reading a book, I will put up an article about it. This is also part of my challenge.</p>
-                    <p>The articles I put up, are not reviews really. They are mostly musings of my mind that I plan to share with you.</p>
+                    <p>The articles I put up, are  mostly musings of my mind that I plan to share here.</p>
                     <p> A wise woman once said: </p>
                     <blockquote class="blockquote">
                         Your tale, sir, would cure deafness.
@@ -66,7 +66,7 @@
                     <li><a href="articles/hercule-poirots-christmas.html">Hercule Poirots Christmas by Agatha Christie.</a></li>
                     <li><a href="articles/power-of-habit.html">The Power Of Habit by Charles Duhig</a></li>
                     <li><a href="articles/murder-of-roger-ackroyd.html">The Murder of Roger Ackroyd.</a></li>
-
+		    <li><a href="articles/lessons-in-stoicism1.html">Lessons in Stoicism: Envy</a></li>
 
                 </ul>
             </div>
