Added authors to article titles for hercule poirot's christmas and the murder of roger ackroyd.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <hr>
                 <ul class="list">
 		  <li><a href="articles/lessons-in-stoicism.html">Lessons in Stoicism: Envy</a></li>
-		  <li><a href="articles/murder-of-roger-ackroyd.html">The Murder of Roger Ackroyd.</a></li>
+		  <li><a href="articles/murder-of-roger-ackroyd.html">The Murder of Roger Ackroyd by Agatha Christie.</a></li>
           <li><a href="articles/power-of-habit.html">The Power Of Habit by Charles Duhig</a></li>
 		  <li><a href="articles/hercule-poirots-christmas.html">Hercule Poirots Christmas by Agatha Christie.</a></li>
 		  <li><a href="articles/willpower.html">The Willpower Instinct by Kelly McGonigal.</a></li>
